# ChickenCrossing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
Game/: Alias.h  AnimationManager.cpp  AnimationManager.h  Components.h  EntryPoint.cpp  EntryPoint.h  GMath.h  Game.cpp  Game.h  Globals.h  Objects.h  Renderer.cpp  Renderer.h  Resources.h
Game/Ecs/: Component.h  ComponentMemory.cpp  ComponentMemory.h  ComponentPool.h  Entity.h  Scene.cpp  Scene.h  Scene.inl  SceneView.h  SceneViewIterator.cpp  SceneViewIterator.h  base_scene_view.h
Game/Entities/: Chicken.h
resources/shaders/: texture.vert
